[gd_scene load_steps=92 format=2]

[ext_resource path="res://Scenes/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Player/States.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Player/Movement.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Player/Backflip.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Player/Buttjump.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Player/Sliding.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Player/Climbing.gd" type="Script" id=7]
[ext_resource path="res://Scenes/Player/Dead.gd" type="Script" id=8]
[ext_resource path="res://Sprites/Creatures/Tux/Big/Slideplaceholder.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Creatures/Tux/Big/Stand.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Creatures/Tux/Big/Buttjump1.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Creatures/Tux/Big/Buttjump2.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Creatures/Tux/Big/Buttjump3.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Creatures/Tux/Big/Buttjump4.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Creatures/Tux/Big/Buttjump5.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Creatures/Tux/Big/Buttjump6.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Creatures/Tux/Big/Buttjump7.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Creatures/Tux/Small/Skid.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Creatures/Tux/Big/Backflip.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Creatures/Tux/Small/Dead1.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Creatures/Tux/Small/Dead2.png" type="Texture" id=21]
[ext_resource path="res://Sprites/Creatures/Tux/Big/Fall1.png" type="Texture" id=22]
[ext_resource path="res://Sprites/Creatures/Tux/Big/Fall2.png" type="Texture" id=23]
[ext_resource path="res://Sprites/Creatures/Tux/Big/Fall3.png" type="Texture" id=24]
[ext_resource path="res://Sprites/Creatures/Tux/Big/Fall4.png" type="Texture" id=25]
[ext_resource path="res://Sprites/Creatures/Tux/Small/Jump1.png" type="Texture" id=26]
[ext_resource path="res://Sprites/Creatures/Tux/Small/Jump2.png" type="Texture" id=27]
[ext_resource path="res://Sprites/Creatures/Tux/Small/Jump3.png" type="Texture" id=28]
[ext_resource path="res://Sprites/Creatures/Tux/Big/Walk8.png" type="Texture" id=29]
[ext_resource path="res://Sprites/Creatures/Tux/Big/Walk1.png" type="Texture" id=30]
[ext_resource path="res://Sprites/Creatures/Tux/Big/Walk2.png" type="Texture" id=31]
[ext_resource path="res://Sprites/Creatures/Tux/Big/Walk3.png" type="Texture" id=32]
[ext_resource path="res://Sprites/Creatures/Tux/Big/Walk4.png" type="Texture" id=33]
[ext_resource path="res://Sprites/Creatures/Tux/Big/Walk5.png" type="Texture" id=34]
[ext_resource path="res://Sprites/Creatures/Tux/Big/Walk6.png" type="Texture" id=35]
[ext_resource path="res://Sprites/Creatures/Tux/Big/Walk7.png" type="Texture" id=36]
[ext_resource path="res://Sprites/Creatures/Tux/Big/Duck.png" type="Texture" id=37]
[ext_resource path="res://Sprites/Creatures/Tux/Small/Stand.png" type="Texture" id=38]
[ext_resource path="res://Sprites/Creatures/Tux/Big/Jump1.png" type="Texture" id=39]
[ext_resource path="res://Sprites/Creatures/Tux/Big/Jump2.png" type="Texture" id=40]
[ext_resource path="res://Sprites/Creatures/Tux/Big/Jump3.png" type="Texture" id=41]
[ext_resource path="res://Sprites/Creatures/Tux/Small/Fall4.png" type="Texture" id=42]
[ext_resource path="res://Sprites/Creatures/Tux/Big/Skid.png" type="Texture" id=43]
[ext_resource path="res://Sprites/Creatures/Tux/Small/Fall1.png" type="Texture" id=44]
[ext_resource path="res://Sprites/Creatures/Tux/Small/Fall2.png" type="Texture" id=45]
[ext_resource path="res://Sprites/Creatures/Tux/Small/Fall3.png" type="Texture" id=46]
[ext_resource path="res://Sprites/Creatures/Tux/Small/Walk8.png" type="Texture" id=47]
[ext_resource path="res://Sprites/Creatures/Tux/Small/Walk1.png" type="Texture" id=48]
[ext_resource path="res://Sprites/Creatures/Tux/Small/Walk2.png" type="Texture" id=49]
[ext_resource path="res://Sprites/Creatures/Tux/Small/Walk3.png" type="Texture" id=50]
[ext_resource path="res://Sprites/Creatures/Tux/Small/Walk4.png" type="Texture" id=51]
[ext_resource path="res://Sprites/Creatures/Tux/Small/Walk5.png" type="Texture" id=52]
[ext_resource path="res://Sprites/Creatures/Tux/Small/Walk6.png" type="Texture" id=53]
[ext_resource path="res://Sprites/Creatures/Tux/Small/Walk7.png" type="Texture" id=54]
[ext_resource path="res://Sprites/Creatures/Tux/Small/Climbing8.png" type="Texture" id=55]
[ext_resource path="res://Sprites/Creatures/Tux/Small/Climbing7.png" type="Texture" id=56]
[ext_resource path="res://Sprites/Creatures/Tux/Small/Climbing6.png" type="Texture" id=57]
[ext_resource path="res://Sprites/Creatures/Tux/Small/Climbing5.png" type="Texture" id=58]
[ext_resource path="res://Sprites/Creatures/Tux/Small/Climbing4.png" type="Texture" id=59]
[ext_resource path="res://Sprites/Creatures/Tux/Small/Climbing3.png" type="Texture" id=60]
[ext_resource path="res://Sprites/Creatures/Tux/Small/Climbing2.png" type="Texture" id=61]
[ext_resource path="res://Sprites/Creatures/Tux/Small/Climbing1.png" type="Texture" id=62]
[ext_resource path="res://Sprites/Creatures/Tux/Big/Climbing8.png" type="Texture" id=63]
[ext_resource path="res://Sprites/Creatures/Tux/Big/Climbing7.png" type="Texture" id=64]
[ext_resource path="res://Sprites/Creatures/Tux/Big/Climbing6.png" type="Texture" id=65]
[ext_resource path="res://Sprites/Creatures/Tux/Big/Climbing5.png" type="Texture" id=66]
[ext_resource path="res://Sprites/Creatures/Tux/Big/Climbing4.png" type="Texture" id=67]
[ext_resource path="res://Sprites/Creatures/Tux/Big/Climbing3.png" type="Texture" id=68]
[ext_resource path="res://Sprites/Creatures/Tux/Big/Climbing2.png" type="Texture" id=69]
[ext_resource path="res://Sprites/Creatures/Tux/Big/Climbing1.png" type="Texture" id=70]
[ext_resource path="res://Audio/SoundEffects/Player/jump.wav" type="AudioStream" id=71]
[ext_resource path="res://Audio/SoundEffects/Player/bigjump.wav" type="AudioStream" id=72]
[ext_resource path="res://Audio/SoundEffects/Player/flip.wav" type="AudioStream" id=73]
[ext_resource path="res://Audio/SoundEffects/Player/thud.ogg" type="AudioStream" id=74]
[ext_resource path="res://Audio/SoundEffects/Bonus/brick.wav" type="AudioStream" id=75]
[ext_resource path="res://Audio/SoundEffects/Player/skid.wav" type="AudioStream" id=76]
[ext_resource path="res://Audio/SoundEffects/Player/shoot.wav" type="AudioStream" id=77]
[ext_resource path="res://Audio/SoundEffects/Player/hurt.wav" type="AudioStream" id=78]
[ext_resource path="res://Audio/SoundEffects/Player/kill.wav" type="AudioStream" id=79]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "slide",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": false,
"name": "buttjump",
"speed": 35.0
}, {
"frames": [ ExtResource( 18 ) ],
"loop": true,
"name": "skid_small",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ) ],
"loop": true,
"name": "backflip",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 21 ) ],
"loop": true,
"name": "gameover",
"speed": 10.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ) ],
"loop": false,
"name": "fall_transition",
"speed": 16.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ) ],
"loop": false,
"name": "jump_small",
"speed": 18.0
}, {
"frames": [ ExtResource( 25 ) ],
"loop": false,
"name": "fall",
"speed": 16.0
}, {
"frames": [ ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ) ],
"loop": true,
"name": "walk",
"speed": 20.0
}, {
"frames": [ ExtResource( 37 ) ],
"loop": true,
"name": "duck",
"speed": 5.0
}, {
"frames": [ ExtResource( 38 ) ],
"loop": true,
"name": "idle_small",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "slide_small",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 21 ) ],
"loop": true,
"name": "gameover_small",
"speed": 10.0
}, {
"frames": [ ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ) ],
"loop": false,
"name": "jump",
"speed": 18.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "buttjumpland",
"speed": 5.0
}, {
"frames": [ ExtResource( 42 ) ],
"loop": false,
"name": "fall_small",
"speed": 16.0
}, {
"frames": [ ExtResource( 43 ) ],
"loop": true,
"name": "skid",
"speed": 5.0
}, {
"frames": [ ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 42 ) ],
"loop": false,
"name": "fall_transition_small",
"speed": 16.0
}, {
"frames": [ ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ) ],
"loop": true,
"name": "walk_small",
"speed": 20.0
}, {
"frames": [ ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ) ],
"loop": true,
"name": "climb_down_small",
"speed": 18.0
}, {
"frames": [ ExtResource( 63 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 67 ), ExtResource( 68 ), ExtResource( 69 ), ExtResource( 70 ) ],
"loop": true,
"name": "climb_down",
"speed": 18.0
}, {
"frames": [ ExtResource( 70 ), ExtResource( 69 ), ExtResource( 68 ), ExtResource( 67 ), ExtResource( 66 ), ExtResource( 65 ), ExtResource( 64 ), ExtResource( 63 ) ],
"loop": true,
"name": "climb_up",
"speed": 15.0
}, {
"frames": [ ExtResource( 62 ), ExtResource( 61 ), ExtResource( 60 ), ExtResource( 59 ), ExtResource( 58 ), ExtResource( 57 ), ExtResource( 56 ), ExtResource( 55 ) ],
"loop": true,
"name": "climb_up_small",
"speed": 18.0
} ]

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath("Control:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0.8, 1.2 ) ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("Control:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.25 ),
"transitions": PoolRealArray( 0.5, -2, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.8, 0.6 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("Control:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 2, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.9, 1.2 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("Control:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 0.5, 2, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.25, 0.85 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("Control:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 0.5, 2, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 0.95 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("Control:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Control/AnimatedSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=9]
tracks/0/type = "value"
tracks/0/path = NodePath("Control/AnimatedSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=10]
tracks/0/type = "value"
tracks/0/path = NodePath("Control/AnimatedSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 15, 31 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 0, 0 )

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
script = ExtResource( 1 )

[node name="States" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Movement" type="Node" parent="States"]
script = ExtResource( 3 )

[node name="Backflip" type="Node" parent="States"]
script = ExtResource( 4 )

[node name="Buttjump" type="Node" parent="States"]
script = ExtResource( 5 )

[node name="Sliding" type="Node" parent="States"]
script = ExtResource( 6 )

[node name="Climbing" type="Node" parent="States"]
script = ExtResource( 7 )

[node name="Dead" type="Node" parent="States"]
script = ExtResource( 8 )

[node name="Control" type="Control" parent="."]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
rect_pivot_offset = Vector2( 0, 38 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Control"]
frames = SubResource( 1 )
animation = "idle"
offset = Vector2( 0, -5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Stop"
anims/Buttjump = SubResource( 2 )
anims/ButtjumpLand = SubResource( 3 )
anims/Jump = SubResource( 4 )
anims/Land = SubResource( 5 )
anims/LandSmall = SubResource( 6 )
anims/Stop = SubResource( 7 )

[node name="AnimationPlayerInvincibility" type="AnimationPlayer" parent="."]
autoplay = "Stop"
anims/HurtInvincibility = SubResource( 8 )
anims/InvincibleStar = SubResource( 9 )
anims/Stop = SubResource( 10 )

[node name="Hitbox" type="CollisionShape2D" parent="." groups=[
"player",
]]
position = Vector2( 0, 1 )
shape = SubResource( 11 )

[node name="ShootLocation" type="Position2D" parent="."]
position = Vector2( 8, 0 )

[node name="ButtjumpHitbox" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 0, 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ButtjumpHitbox"]
shape = SubResource( 12 )
disabled = true

[node name="StandWindow" type="RayCast2D" parent="."]
position = Vector2( 0, 6 )
enabled = true
cast_to = Vector2( 0, -12 )
collision_mask = 16

[node name="ButtjumpDistance" type="RayCast2D" parent="."]
position = Vector2( 0, 32 )
enabled = true
cast_to = Vector2( 0, 32 )
collision_mask = 4

[node name="SFX" type="Node" parent="."]
editor/display_folded = true

[node name="Jump" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 71 )

[node name="BigJump" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 72 )

[node name="Flip" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 73 )

[node name="Thud" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 74 )

[node name="Brick" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 75 )

[node name="Skid" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 76 )

[node name="Shoot" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 77 )

[node name="Hurt" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 78 )

[node name="Kill" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 79 )

[node name="InvincibilityTimer" type="Timer" parent="."]

[node name="ButtjumpTimer" type="Timer" parent="."]
one_shot = true

[node name="ButtjumpLandTimer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_InvincibilityTimer_timeout"]
